<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activity.PasswordRecoveryActivity">

    <LinearLayout
        android:id="@+id/toastContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:paddingBottom="16dp"
        android:translationZ="999dp" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center"
                tools:ignore="UselessParent">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/Password_recovery"
                    android:textSize="40sp"/>


                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"/>



                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/mailtextdis"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    app:boxBackgroundMode="outline"
                    app:boxCornerRadiusTopStart="16dp"
                    app:boxCornerRadiusTopEnd="16dp"
                    app:boxCornerRadiusBottomStart="16dp"
                    app:boxCornerRadiusBottomEnd="16dp"
                    app:cursorColor="@color/white"
                    app:boxStrokeColor="@color/white"
                    app:hintTextColor="@color/white"
                    app:boxBackgroundColor="@color/textboxgray"
                    app:hintAnimationEnabled="true"
                    app:boxStrokeWidth="1dp"
                    app:hintEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/mailtext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:hint="@string/Enter_email"
                        android:importantForAutofill="no"
                        android:textColor="@color/white"
                        app:boxStrokeColor="@color/white" />

                </com.google.android.material.textfield.TextInputLayout>


                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"/>

                <com.google.android.material.button.MaterialButton
                    android:layout_width="350dp"
                    android:layout_height="50dp"
                    android:id="@+id/recoverypass_btn"
                    android:text="@string/Restore"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>